# strong-type

./: .bumpversion.cfg  CMakeLists.txt
include/libstrong/: collect.hh  optional.hh  type.hh
include/libstrong/skill/: comparable.hh  serial_id.hh  streamable.hh
src/: type.cc
test/: CMakeLists.txt  main.cc  test_skills.cc
